Fixed Text Overflow (hopefully)

--- a/main.css
+++ b/main.css
@@ -24,7 +24,7 @@ body {
 .gametxt {
     float: none;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: larger;
+    font-size: large;
 }
 
 .title {
